--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.17.1",
+    "express-validator": "^6.7.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.8",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.16",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.0",
     "sequelize": "^6.3.5"
   }
